--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,7 @@ dependencies:
   geolocator: ^10.1.0
   location: ^5.0.0
   url_launcher: ^6.2.5
-  
+  permission_handler: ^11.0.1
 
 dev_dependencies:
   flutter_test:
